--- a/style.scss
+++ b/style.scss
@@ -281,7 +281,7 @@ nav {
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
-    font-weight: bold;
+    color: #2e23ad;
   }
 }
 
