--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -85,7 +85,7 @@ else %} <meta name="description" content="{{ site.description }}" />
   sizes="16x16"
   href="/images/favicon-16x16.png"
 />
-<link rel="mask-icon" href="/images/apple-icon-180x180.png" color="#ffffff" />
+<link rel="mask-icon" href="/images/apple-icon-180x180.svg" color="#ffffff" />
 <link rel="manifest" href="/images/manifest.json" />
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
