--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -88,5 +88,7 @@ else %} <meta name="description" content="{{ site.description }}" />
 <link rel="mask-icon" href="/images/apple-icon-180x180.svg" color="#ffffff" />
 <link rel="manifest" href="/images/manifest.json" />
 <meta name="msapplication-TileColor" content="#ffffff" />
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+<meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png" />
 <meta name="theme-color" content="#ffffff" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
