--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,9 @@ layout: default
     {{ content }}
   </div>
 
+  <div class="date">Written on {{ page.date | date: '%B %e, %Y' }}</div>
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Last updated on {{ page.last_modified_at | date: '%B %e, %Y' }}
   </div>
 
   {% include disqus.html %}
